syntax = "proto3";

package services.v1;

service TelegramService {
  rpc call(CallRequest) returns (CallResponse) {}
}

message CallRequest {
  string token = 1;
  string chat_id = 2;
  string text = 3;
  bool is_silent = 4;
}

message CallResponse {
  string status = 1;
}
